--- a/content/publication/liu-2020-giobalfusion/cite.bib
+++ b/content/publication/liu-2020-giobalfusion/cite.bib
@@ -1,6 +1,7 @@
 @article{liu2020giobalfusion,
  author = {Liu, Shengzhong and Yao, Shuochao and Li, Jinyang and Liu, Dongxin and Wang, Tianshi and Shao, Huajie and Abdelzaher, Tarek},
  journal = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies},
+ month = {3},
  number = {1},
  pages = {1--27},
  publisher = {ACM New York, NY, USA},
