--- a/mypub_aug2020.bib
+++ b/mypub_aug2020.bib
@@ -380,6 +380,7 @@
   journal={Computational and Mathematical Organization Theory},
   pages={1--30},
   year={2020},
+  month = {1},
   publisher={Springer US}
 }
 
@@ -391,6 +392,7 @@
   number={1},
   pages={1--19},
   year={2020},
+  month = {2},
   publisher={ACM New York, NY, USA}
 }
 
@@ -411,6 +413,7 @@
   number={1},
   pages={1--26},
   year={2020},
+  month = {2},
   publisher={ACM New York, NY, USA}
 }
 
@@ -422,6 +425,7 @@
   number={1},
   pages={1--27},
   year={2020},
+  month = {3},
   publisher={ACM New York, NY, USA}
 }
 
@@ -430,20 +434,16 @@
   author={Shao, Huajie and Sun, Dachun and Wu, Jiahao and Zhang, Zecheng and Zhang, Aston and Yao, Shuochao and Liu, Shengzhong and Wang, Tianshi and Zhang, Chao and Abdelzaher, Tarek},
   booktitle={Proceedings of The Web Conference 2020},
   pages={629--639},
-  year={2020}
+  year={2020},
+  month = {4},
 }
 
-@article{yao2017compressing,
-  title={Compressing deep neural network structures for sensing systems with a compressor-critic framework},
-  author={Yao, Shuochao and Zhao, Yiran and Zhang, Aston and Su, Lu and Abdelzaher, Tarek F},
-  journal={CoRR, abs/1706.01215},
-  year={2017}
-}
 
 @article{shao2020truth,
   title={Truth Discovery with Multi-modal Data in Social Sensing},
   author={Shao, Huajie and Sun, Dachun and Yao, Shuochao and Su, Lu and Wang, Zhibo and Liu, Dongxin and Liu, Shengzhong and Kaplan, Lance and Abdelzaher, Tarek},
   journal={IEEE Transactions on Computers},
   year={2020},
+  month = {7},
   publisher={IEEE}
 }
