--- a/content/publication/yao-2018-sensegan/cite.bib
+++ b/content/publication/yao-2018-sensegan/cite.bib
@@ -1,6 +1,7 @@
 @article{yao2018sensegan,
  author = {Yao, Shuochao and Zhao, Yiran and Shao, Huajie and Zhang, Chao and Zhang, Aston and Hu, Shaohan and Liu, Dongxin and Liu, Shengzhong and Su, Lu and Abdelzaher, Tarek},
  journal = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies},
+ month = {9},
  number = {3},
  pages = {144},
  publisher = {ACM},
