--- a/publication_feature.bib
+++ b/publication_feature.bib
@@ -4,6 +4,7 @@
   booktitle={The World Wide Web Conference},
   pages={2192--2202},
   year={2019},
+  month={5},
   organization={ACM}
 }
 
@@ -11,15 +12,17 @@
   title={DeepIoT: Compressing Deep Neural Network Structures for Sensing Systems with a Compressor-Critic Framework},
   author={Yao, Shuochao and Zhao, Yiran and Zhang, Aston and Su, Lu and Abdelzaher, Tarek},
   booktitle={SenSys '17 Proceedings of the 15th ACM Conference on Embedded Network Sensor Systems},
-  year={2017}
+  year={2017},
+  month={4}
 }
 
 @inproceedings{yao2018fastdeepiot,
   title={Fastdeepiot: Towards understanding and optimizing neural network execution time on mobile and embedded devices},
   author={Yao, Shuochao and Zhao, Yiran and Shao, Huajie and Liu, ShengZhong and Liu, Dongxin and Su, Lu and Abdelzaher, Tarek},
-  booktitle={Proceedings of the 16th ACM Conference on Embedded Networked Sensor Systems},
+  booktitle={SenSys '18 Proceedings of the 16th ACM Conference on Embedded Networked Sensor Systems},
   pages={278--291},
-  year={2018}
+  year={2018},
+  month={11}
 }
 
 @article{yao2018sensegan,
@@ -30,6 +33,7 @@
   number={3},
   pages={144},
   year={2018},
+  month={9},
   publisher={ACM}
 }
 
@@ -38,5 +42,6 @@
   author={Yao, Shuochao and Hu, Shaohan and Zhao, Yiran and Zhang, Aston and Abdelzaher, Tarek},
   booktitle={Proceedings of the 26th International Conference on World Wide Web},
   pages={351--360},
-  year={2017}
+  year={2017},
+  month={4}
 }
